--- a/src/ReactiveUI.WPF.SampleApp/ReactiveUI.WPF.SampleApp.csproj
+++ b/src/ReactiveUI.WPF.SampleApp/ReactiveUI.WPF.SampleApp.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
