--- a/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
@@ -13,6 +13,7 @@
     -->
     <!--<WarningsAsErrors>8032,8785</WarningsAsErrors>-->
     <TreatWarningsAsErrors />
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
