--- a/src/Vetuviem.Blazor.SourceGenerator/Vetuviem.Blazor.SourceGenerator.csproj
+++ b/src/Vetuviem.Blazor.SourceGenerator/Vetuviem.Blazor.SourceGenerator.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="$(ProjectDir)..\Vetuviem.SourceGenerator\bin\$(Configuration)\netstandard2.0\Vetuviem.SourceGenerator.dll" />
+    <None Include="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
   </ItemGroup>
 
 </Project>
