--- a/src/Vetuviem.WPF.SourceGenerator/Vetuviem.WPF.SourceGenerator.csproj
+++ b/src/Vetuviem.WPF.SourceGenerator/Vetuviem.WPF.SourceGenerator.csproj
@@ -7,6 +7,7 @@
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
