--- a/src/Vetuviem.WinUi.SourceGenerator/Vetuviem.WinUi.SourceGenerator.csproj
+++ b/src/Vetuviem.WinUi.SourceGenerator/Vetuviem.WinUi.SourceGenerator.csproj
@@ -11,11 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vetuviem.SourceGenerator\Vetuviem.SourceGenerator.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Vetuviem.SourceGenerator\Vetuviem.SourceGenerator.csproj" PrivateAssets="all" ReferenceOutputAssembly="true" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Vetuviem.SourceGenerator\**\*.cs" LinkBase="Vetuviem.SourceGenerator" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(OutputPath)\Vetuviem.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
     <None Include="..\Vetuviem-WinUI.props" Pack="true" PackagePath="build" Visible="false" />
   </ItemGroup>
