--- a/src/Vetuviem.WinUi.SourceGenerator/Vetuviem.WinUi.SourceGenerator.csproj
+++ b/src/Vetuviem.WinUi.SourceGenerator/Vetuviem.WinUi.SourceGenerator.csproj
@@ -17,7 +17,7 @@
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="$(OutputPath)\Vetuviem.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
-    <None Include="..\Vetuviem-WinUI.props" Pack="true" PackagePath="build" Visible="false" />
+    <None Include="..\Vetuviem-WinUI.props" Pack="true" PackagePath="build/$(ProjectName).props" Visible="false" />
   </ItemGroup>
 
 </Project>
