--- a/src/Vetuviem.Winforms.SourceGenerator/Vetuviem.Winforms.SourceGenerator.csproj
+++ b/src/Vetuviem.Winforms.SourceGenerator/Vetuviem.Winforms.SourceGenerator.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="$(OutputPath)\Vetuviem.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-    <None Include="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
+    <None Include="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" Pack="true" PackagePath="build/$(ProjectName).props" Visible="false" />
   </ItemGroup>
 
 </Project>
