WIP: Feature/project settings (#396)
* initial logic to allow override namespace

* default classes to internal

* more rough concept for assemblies, and namespace config

* change default rootnamespace to VetuviemGenerated

* logic to load properties

* net8 related bumps

* default to internal for abstraction

* push rootnamespace around

* correct sub namespacing

* sample now uses makeclassespublic

* correct xmldoc gen for unbound ctor

* restructure projects to have in per platform drop ins

* refactor namespaces

* fix usings

* github actions to dotnet build

* drop uwp

* workaorund for winui3

* remove uwp int tests

* adjust packing

* fix sln arg in codeql

* fix workloads for codeql, renovate to common config

* update xml doc for source gen code

* add core props file in nupkg

* rework analyzers to nupkg

* fix roslyn analzyer rule config

* embed common code rather than dll

* adjust packing of core dll

* rename packed props file

* Update Vetuviem.WinUi.SourceGenerator.csproj

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -30,7 +30,7 @@ jobs:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_NOLOGO: true
       DOTNET_GENERATE_ASPNET_CERTIFICATE: false
-      SOLUTION_PATH: src\\Vetuviem.sln
+      solutionpath: src\Vetuviem.sln
 
     strategy:
       fail-fast: false
@@ -46,6 +46,17 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+
+    - name: Install DotNet workloads
+      shell: bash
+      run: |
+        dotnet workload install android ios tvos macos maui wasm-tools
+        dotnet workload list
+
     - name: Install Windows SDK 10.0.16299
       shell: pwsh
       run: |
@@ -58,15 +69,8 @@ jobs:
         $process.Start()
         $process.WaitForExit()
 
-    - name: Install .NET 7
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 7.0.x
-
     - name: Add MSBuild to PATH
-      uses: glennawatson/setup-msbuild@v1.0.3
-      with:
-        prerelease: true
+      uses: microsoft/setup-msbuild@v2.0.0
 
     # This mitigates an issue with websdk projects loading analyzers from old packages.
     - name: Cleanup nuget local storage
@@ -74,7 +78,7 @@ jobs:
 
     - name: Restore Packages
       run: |
-        dotnet restore ${{ env.SOLUTION_PATH }} /bl:artifacts\\binlog\\restore.binlog
+        dotnet restore ${{ env.solutionpath }} /bl:artifacts\\binlog\\restore.binlog
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -88,8 +92,7 @@ jobs:
 
     - name: Run Build
       run: |
-        msbuild /t:build,pack /p:Configuration=Release /maxcpucount /bl:artifacts\\binlog\\build.binlog /p:ContinuousIntegrationBuild=true /p:PackageOutputPath=..\..\artifacts\nuget /p:UseSharedCompilation=false
-      working-directory: src
+        dotnet build ${{ env.solutionpath }} --configuration Release --no-restore /bl:artifacts\\binlog\\build.binlog /p:ContinuousIntegrationBuild=true 
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
