--- a/src/ReactiveUI.WPF.SampleApp/ReactiveUI.WPF.SampleApp.csproj
+++ b/src/ReactiveUI.WPF.SampleApp/ReactiveUI.WPF.SampleApp.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
