--- a/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
+++ b/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
@@ -1,10 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.19041</TargetFramework>
     <UseWpf>True</UseWpf>
     <IsPackable>False</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="MahApps.Metro.SimpleChildWindow" Version="2.2.1" />
+    <PackageReference Include="ReactiveUI.WPF" Version="20.1.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
