--- a/src/Vetuviem.SourceGenerator/Vetuviem-SourceGenerator.props
+++ b/src/Vetuviem.SourceGenerator/Vetuviem-SourceGenerator.props
@@ -5,5 +5,6 @@
     <CompilerVisibleProperty Include="Vetuviem_Assemblies" />
     <CompilerVisibleProperty Include="Vetuviem_Assembly_Mode" />
     <CompilerVisibleProperty Include="Vetuviem_Base_Namespace" />
+    <CompilerVisibleProperty Include="Vetuviem_Include_Obsolete_Items" />
   </ItemGroup>
 </Project>
