--- a/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vetuviem.Avalonia.SourceGenerator\Vetuviem.Avalonia.SourceGenerator.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Vetuviem.Avalonia.SourceGenerator\Vetuviem.Avalonia.SourceGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" Private="false" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
