restore maui gen

--- a/src/ReactiveUI.Maui.ViewToViewModelBindings/ReactiveUI.Maui.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Maui.ViewToViewModelBindings/ReactiveUI.Maui.ViewToViewModelBindings.csproj
@@ -15,6 +15,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.Maui" Version="20.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vetuviem.Maui.SourceGenerator\Vetuviem.Maui.SourceGenerator.csproj" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
