--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -18,15 +18,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.19" ReferenceOutputAssembly="true" />
+    <PackageReference Include="MudBlazor" Version="8.11.0" />
     <PackageReference Include="ReactiveUI.Blazor" Version="20.4.1" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vetuviem.Blazor.SourceGenerator\Vetuviem.Blazor.SourceGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
   <Import Project="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" />
   <PropertyGroup>
     <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
+    <Vetuviem_Assemblies>MudBlazor.dll</Vetuviem_Assemblies>
+    <Vetuviem_Assembly_Mode>Extend</Vetuviem_Assembly_Mode>
   </PropertyGroup>
 </Project>
