--- a/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
+++ b/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
@@ -10,11 +10,13 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.4" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="MahApps.Metro.SimpleChildWindow" Version="2.2.1" />
+    <PackageReference Include="MudBlazor" Version="8.11.0" />
     <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Vetuviem.Avalonia.SourceGenerator\Vetuviem.Avalonia.SourceGenerator.csproj" />
+    <ProjectReference Include="..\Vetuviem.Blazor.SourceGenerator\Vetuviem.Blazor.SourceGenerator.csproj" />
     <ProjectReference Include="..\Vetuviem.Maui.SourceGenerator\Vetuviem.Maui.SourceGenerator.csproj" />
     <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
     <ProjectReference Include="..\Vetuviem.Winforms.SourceGenerator\Vetuviem.Winforms.SourceGenerator.csproj" />
