update for xunit v3

--- a/src/Vetuviem.Testing/Vetuviem.Testing.csproj
+++ b/src/Vetuviem.Testing/Vetuviem.Testing.csproj
@@ -8,9 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundatio.Xunit" Version="12.0.0" />
     <PackageReference Include="NetTestRegimentation" Version="2.0.8" />
-    <PackageReference Include="xunit.assert" Version="2.9.3" />
+    <PackageReference Include="NetTestRegimentation.XUnit" Version="2.0.8" />
+    <PackageReference Include="xunit.v3.assert" Version="3.0.1" />
+    <PackageReference Include="xunit.v3.extensibility.core" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
