housekeeping: switch to common ci (#531)
* Update ci.yml

* move global json, move to immutable v1 of action

* Update Directory.build.props

* update test target framework

* update for xunit v3

* remark winforms \ winui int test

* Create dotnet-tools.json

--- a/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
+++ b/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
@@ -1,17 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <IsPackable>False</IsPackable>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <NoWarn>CA1034,CA1515</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vetuviem.Blazor.SourceGenerator\Vetuviem.Blazor.SourceGenerator.csproj" />
     <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Update="Xunit.StaFact" Version="1.2.69" />
   </ItemGroup>
 
 </Project>
