--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,12 @@ jobs:
       pages: write
       id-token: write
       pull-requests: write
-      security-events: write
       packages: read
+      security-events: write
     uses: dpvreony/github-action-workflows/.github/workflows/dotnet-ci.yml@v1.2.1
     with:
       solutionName: "Vetuviem"
     secrets:
-      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      NUGET_USER: ${{ secrets.NUGET_USER }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
