--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       pull-requests: write
       packages: read
       security-events: write
-    uses: dpvreony/github-action-workflows/.github/workflows/dotnet-ci.yml@v1.2.2
+    uses: dpvreony/github-action-workflows/.github/workflows/dotnet-ci.yml@7dc3a9e061997c8dbcff1fcaf90abef889b3d647
     with:
       buildOs: "windows"
       solutionName: "Vetuviem"
