--- a/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
@@ -6,7 +6,7 @@
     <DebugSymbols>True</DebugSymbols>
     <UseWPF>true</UseWPF>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
-    <!--
+    <Nullable>enable</Nullable>    <!--
     If you're seeing CS8032 warnings, it can be because the upstream source generator dll has been rebuilt or you've changed the
     target frameworks in this project. Visual Studio seems to have a cache that invalidates. Reloading Visual Studio can
     solve the issue.
@@ -14,6 +14,7 @@
     <!--<WarningsAsErrors>8032,8785</WarningsAsErrors>-->
     <TreatWarningsAsErrors />
     <IsPackable>False</IsPackable>
+    <NoWarn>WPF0001</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ReactiveUI.WPF" Version="21.0.1" />
