--- a/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
@@ -29,5 +29,6 @@
   <Import Project="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" />
   <PropertyGroup>
     <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
+    <Vetuviem_Allow_Experimental_Properties>true</Vetuviem_Allow_Experimental_Properties>
   </PropertyGroup>
 </Project>
