Enable running integration tests on primary OS only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
     with:
       buildOs: "windows"
       solutionName: "Vetuviem"
+      runIntTestsOnPrimaryOsOnly: true
     secrets:
       NUGET_USER: ${{ secrets.NUGET_USER }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
