--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       pull-requests: write
       packages: read
       security-events: write
-    uses: dpvreony/github-action-workflows/.github/workflows/dotnet-ci.yml@8f13508024b266204ae17820a5584eab1adafc06
+    uses: dpvreony/github-action-workflows/.github/workflows/dotnet-ci.yml@1.4.3
     with:
       buildOs: "windows"
       solutionName: "Vetuviem"
