fix logging change in splat 19

--- a/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
@@ -18,6 +18,7 @@
     <NoWarn>WPF0001</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Splat" Version="19.1.1" />
     <PackageReference Include="ReactiveUI.WPF" Version="22.3.1" />
   </ItemGroup>
 
