pin splat 19 for other ui frameworks

--- a/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
@@ -15,6 +15,7 @@
     <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Splat" Version="19.1.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.9" />
   </ItemGroup>
 
