--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="8.15.0" />
+    <PackageReference Include="Splat" Version="19.1.1" />
     <PackageReference Include="ReactiveUI.Blazor" Version="22.3.1" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
