--- a/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Avalonia.ViewToViewModelBindings/ReactiveUI.Avalonia.ViewToViewModelBindings.csproj
@@ -25,5 +25,6 @@
   <Import Project="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" />
   <PropertyGroup>
     <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
+    <Vetuviem_UI_Framework>Avalonia</Vetuviem_UI_Framework>
   </PropertyGroup>
 </Project>
