--- a/src/ReactiveUI.Maui.ViewToViewModelBindings/ReactiveUI.Maui.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Maui.ViewToViewModelBindings/ReactiveUI.Maui.ViewToViewModelBindings.csproj
@@ -26,5 +26,6 @@
   <PropertyGroup>
     <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
     <Vetuviem_Include_Obsolete_Items>true</Vetuviem_Include_Obsolete_Items>
+    <Vetuviem_UI_Framework>Maui</Vetuviem_UI_Framework>
   </PropertyGroup>
 </Project>
