--- a/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
@@ -11,6 +11,7 @@
     <Platforms>x86;x64</Platforms>
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <!--
     If you're seeing CS8032 warnings, it can be because the upstream source generator dll has been rebuilt or you've changed the
     target frameworks in this project. Visual Studio seems to have a cache that invalidates. Reloading Visual Studio can
