--- a/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
@@ -7,6 +7,7 @@
     <DebugSymbols>True</DebugSymbols>
     <UseWindowsForms>true</UseWindowsForms>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <!--
     If you're seeing CS8032 warnings, it can be because the upstream source generator dll has been rebuilt or you've changed the
     target frameworks in this project. Visual Studio seems to have a cache that invalidates. Reloading Visual Studio can
