Fix: switch to single generator dll (#608)
* *BREAKING* consolidate generator projects

* Add UI Framework setting

* namespace refactor

* switch to single entry point for project based gen

* consolidate assembly based gen

* Update VetuviemEntryProjectSourceGenerator.cs

* update the rxui sample project settings

* allow ui framework setting to be case insensitive

* refactor tests

* correct setting name casing

* Update global.json

* EnforceExtendedAnalyzerRules

* disable docfx metadata for now

--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -5,6 +5,7 @@
     <LangVersion>9</LangVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <!--
     If you're seeing CS8032 warnings, it can be because the upstream source generator dll has been rebuilt or you've changed the
     target frameworks in this project. Visual Studio seems to have a cache that invalidates. Reloading Visual Studio can
@@ -22,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vetuviem.Blazor.SourceGenerator\Vetuviem.Blazor.SourceGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Vetuviem.SourceGenerator\Vetuviem.SourceGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
@@ -31,5 +32,6 @@
     <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
     <Vetuviem_Assemblies>MudBlazor.dll</Vetuviem_Assemblies>
     <Vetuviem_Assembly_Mode>Extend</Vetuviem_Assembly_Mode>
+    <Vetuviem_UI_Framework>Blazor</Vetuviem_UI_Framework>
   </PropertyGroup>
 </Project>
